# OpenGL_cmake

./: CMakeLists.txt  Source.cpp
depend/include/glad/: glad.c  glad.h
depend/libs/: glfw3.lib
